Example of issue Error: Can't set headers after they are sent.
Example: of issue Can't set headers after they are sent.
  curl -i http://localhost:10010/person -u baduser:badpassword

Example: of correct calls:
  curl -i http://localhost:10010/hello -u john:john-uk-password
  curl -i http://localhost:10010/person -u john:john-uk-password

Example: of correct calls where user is not correct:
  curl -i http://localhost:10010/hello -u baduser:badpassword
