# api/swagger/swagger.yaml
@@ -21,9 +21,6 @@ securityDefinitions:
   basicAuthAtDomainUk:
     type: basic
     description: basic auth checks on Uk passwords.
-  basicAuthAtDomainFr:
-    type: basic
-    description: basic auth checks on Fr passwords.
 paths:
   /hello:
     # binds a127 app logic to a route
@@ -31,7 +28,6 @@ paths:
     get:
       security:
         - basicAuthAtDomainUk: []
-        - basicAuthAtDomainFr: []
       description: Returns 'Hello' to the caller
       # used as the method name of the controller
       operationId: hello
@@ -58,7 +54,6 @@ paths:
     get:
       security:
         - basicAuthAtDomainUk: []
-        - basicAuthAtDomainFr: []
       description: Returns persons to the caller
       # used as the method name of the controller
       operationId: list
